@@ -11,7 +11,7 @@ t0 = time.time()
 from ohmpi.ohmpi import OhmPi
 k = OhmPi()
 print('---------- test ----------')
-k.test(remote=True)
+#k.test(remote=True)
 #k.test_mux(activation_time=0.1)) # already tested in k.test() > k._test_mux_ABMN()
 print('---------- sequence generation ----------')
 k.create_sequence(16, params=[('dpdp', 1, 8)])
@@ -47,7 +47,7 @@ k.interrupt()
 print('---------- inversion ----------')
 k.remove_data()
 k.create_sequence(8, params=[('wenner', 3)])
-k.run_sequence(vab_req=5., duty_cycle=1, injection_duration=0.1, strategy='full_constant', fw_in_csv=True)
+k.run_sequence(vab_req=5., duty_cycle=1, injection_duration=0.1, strategy='full_constant', fw_in_zip=True)
 datadir = os.path.join(os.path.dirname(__file__), '../data/')
 fnames = sorted([f for f in os.listdir(datadir) if f[-4:] == '.csv'])
 survey_names = [os.path.join(datadir, fnames[-1])]
@@ -60,6 +60,7 @@ k.download_data(ftype='ohmpi', start_date='2022-01-01', end_date='2030-01-01')
 k.download_data(ftype='pygimli')
 k.download_data(ftype='protocol')
 print('---------- find optimal vab ----------')
+k.create_sequence(8, params=[('wenner', 3)])
 k.find_optimal_vab_for_sequence(n_samples=3)
 
 print('TOTAL time running: {:.1f}s'.format(time.time() - t0))
